projects/compiler/test/typechecker/for/error_bad_iterator_option_type.out
Error at %FILE_NAME%:2:10
Forbidden type for for-loop target
  |  for _ in arr {
              ^
Type String[]? is not iterable
