projects/compiler/test/typechecker/for/error_bad_iterator_option_type.abra
val arr: String[]? = None
for _ in arr {

}